@@ -1,3 +1,8 @@
+* Dec 21 2000 hship
+
+Attempt a few minor optimizations related to PropertyHelper and PropertyBinding.
+
+
 * Dec 20 2000 hship
 
 Update the documentation.
